[package]
name = "hats-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hats"
path = "src/main.rs"

[dependencies]
# CLI argument parsing - like Python's typer
clap = { version = "4.5", features = ["derive"] }

# TOML serialization/deserialization
toml = "0.8"

# Serialization framework - needed for TOML
serde = { version = "1.0", features = ["derive"] }

# Better error handling - like Python's exceptions
anyhow = "1.0"

# Interactive prompts - like typer.prompt()
dialoguer = "0.11"

# Home directory detection
home = "0.5"
